--- a/requirements.txt
+++ b/requirements.txt
@@ -104,6 +104,7 @@ pure-eval==0.2.2
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
+pydotplus==2.0.2
 Pygments==2.17.2
 pyparsing==3.1.1
 python-dateutil==2.8.2
